<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nasaimageoftheday.DetailsFragmentImageOfTheDay"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewFragmentIdImageOfTheDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/idImageOfTheDay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/textViewFragmentTitleImageOfTheDay"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewFragmentIdImageOfTheDay"/>

    <TextView
        android:text="@string/dateImageOfTheDay"
        android:id="@+id/textViewFragmentDateImageOfTheDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewFragmentTitleImageOfTheDay"
        />

    <TextView
        android:text="@string/urlImageOfTheDay"
        android:id="@+id/textViewFragmentUrlImageOfTheDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFragmentDateImageOfTheDay"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />

    <ImageView
        android:text="@string/explanationImageOfTheDay"
        android:id="@+id/imageViewFragmentImageImageOfTheDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewFragmentUrlImageOfTheDay"
        android:contentDescription="@string/image_of_the_day"
        />

    <Button
        android:id="@+id/buttonHideFragmentImageOfTheDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/hideImageOfTheDay" />
</RelativeLayout>