<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/navDrawerBBC"
        android:title="@string/bbc_news"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_plus"/>

    <item android:id="@+id/navDrawerTheGuardian"
        android:title="@string/guardian"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_plus"/>

    <item android:id="@+id/navDrawerNasaEarth"
        android:title="@string/nasa_earth_image"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:icon="@drawable/icon_plus"/>

    <item android:id="@+id/navDrawerMain"
        android:title="@string/mainImageOfTheDay"
        app:showAsAction="ifRoom"
        android:orderInCategory="4"
        android:icon="@drawable/home"/>
</menu>