<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textviewSelectDate"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/Date"
            android:clickable="true"
            android:hint="@string/birthday"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:focusable="false"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/getImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getImageOfTheDay" />

    </LinearLayout>

</LinearLayout>