<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asis.finalproject.guardian.DetailsFragment">

    <!-- TODO: Update blank fragment layout -->
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical" >
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal" >

           <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20dp"
                android:id="@+id/title"
                android:layout_marginBottom="30dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/articleTitle" />
        </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textSize="20dp"
                android:id="@+id/url"
                android:layout_marginBottom="30dp"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/articleUrl"
               android:textColor="#1C22ED"
               android:clickable="true" /> <!-- added clickable to click url -->
        </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sectionName"
                android:textSize="20dp"
                android:id="@+id/sectionName"
                android:layout_marginBottom="30dp"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/articleSectionName" />
        </LinearLayout>

   </LinearLayout>

</FrameLayout>
